--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,10 @@ section .containera h2{
     margin-right: auto;
 }
 .container2, .containerb{
-    width: fit-content;
+    width: 300px;
     height: fit-content;
     padding-left: 30px;
-    padding-right: 100px;
+    padding-right: 30px;
 
     margin-left: auto;
     margin-right: 0;
