--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ section .containera h2{
     text-align: center;
     font-size: 14px;
     height: 100px;
-    background-image: url(../images/banner.png);
+    background-image: url(../images/banner2.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
