--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ section .containera h2{
     margin-right: auto;
 }
 .container2, .containerb{
-    width: fit-content;
+    width: 300px;
     height: fit-content;
     padding-left: 30px;
     padding-right: 30px;
@@ -106,7 +106,6 @@ section .containera h2{
     line-height: 24px;
 }
 #invitation .containera p .orange {
-    font-size: 15px;
     color: rgb(233, 84, 0);
 }
 #invitation .containerb p{
@@ -125,7 +124,7 @@ section .containera h2{
     text-align: center;
     font-size: 14px;
     height: 100px;
-    background-image: url(../images/banner2.png);
+    background-image: url(../images/banner.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
