--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ section .containera h2{
 #photo .container figure{
     width: 100%;
     height: 100%;
-    margin: auto;
+    position: relative;
 }
 #photo .container figure img{
     width: 100%;
