--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,9 @@ section .containera h2{
 #photo .container figure{
     width: 100%;
     height: 100%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #photo .container figure img{
     width: 100%;
@@ -226,111 +228,3 @@ section .containera h2{
   opacity: 1;
 }
 
-.video{
-    position: relative;
-    padding-bottom: 56.25%;
-   margin-bottom: 35px;
-}
-#video iframe{
-    width: 100%;
-    position: absolute;
-    left: 0;
-    height: 100%;
-}
-#video p{
-    margin-bottom: 35px;
-    text-align: center;
-    font-size: 14px;
-}
-#location .map{
-    padding-bottom: 40px;
-}
-#location .icons{
-    margin-left: 30px;
-    margin-right: 30px;
-}
-#location .icons .appLink{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding-bottom: 90px;
-}
-#location .icons ul li:not(:last-child){
-    padding-right: 30px;
-}
-#location .icons .appLink p{
-    font-size: 13px;
-    padding-top: 10px;
-}
-#location .container{
-    width: 100%;
-    object-fit: cover;
-}
-#location .monthly{
-    width: 100%;
-    height: 300px;
-    margin-bottom: 30px;
-    object-fit: cover;
-}
-#location .monthly img{
-    
-    width: 100%;
-    height: 300px;
-    margin-bottom: 30px;
-    object-fit: cover;
-}
-#location .when{
-    text-align: right;
-    font-size: 14px;
-   
-}
-#location .when p{
-  line-height: 24PX;
-  padding-bottom: 45px;
-}
-#notice{
-    padding-bottom: 45px;
-}
-#notice .box{
-    background: white;
-    width: 100%;
-    height: 370px;
-    color: #5C80D6;
-   
-}
-#notice img{
-    width: 100%;
-    object-fit: cover;
-}
-#notice .box h2{
-    font-size: 20px;
-    text-align: center;
-    padding-bottom: 20px;
-    font-weight: bold;
-}
-#notice .box p{
-    text-align: left;
-    font-size: 13px;
-    line-height: 30px;
-}
-footer{
-    border-top: 1px solid #4A72D3;
-    color: #4A72D3;
-    
-    padding-bottom: 20px; 
-    
-  
-}
-footer h1{
-    text-align: center;
-    padding-top: 20px;
-}
-footer p{
-    font-size: 12px;
-    text-align: center;
-    padding-bottom: 10px;
-    line-height: 15px;
-}
-footer p.copy{
-    padding-bottom: 30px;
-}
